--- a/doors/colordoors.html
+++ b/doors/colordoors.html
@@ -15,7 +15,7 @@
         <div class="sidenav_wrapper">
             <div class="nav_top">
                 <div href="javascript:void(0)" class="closebtn" onclick="closeNav()"></div>
-                <a href=""><img src="/img/svg/logo_top.svg" alt=""></a>
+                <a href=""><img src="./img/svg/logo_top.svg" alt=""></a>
             </div>
             <div class="sidenav_content">
                 <div class="sidenav_phones">
@@ -231,7 +231,7 @@
         <div class="sidenav_wrapper">
             <div class="nav_top">
                 <div href="javascript:void(0)" class="closebtn" onclick="closeNav1()"></div>
-                <a href=""><img src="/img/svg/logo_top.svg" alt=""></a>
+                <a href=""><img src="./img/svg/logo_top.svg" alt=""></a>
             </div>
             <div class="sidenav_content">
                 <div class="sidenav_filter_menu">
@@ -331,13 +331,13 @@
         <nav>
             <div class="wrapper nav">
                 <div onclick="openNav()" class="burger"></div>
-                <a href=""><img class="logo_top" src="/img/svg/logo_top.svg" alt=""></a>
-                <a class="number_top" href="tel:+74955324941"><img src="/img/svg/tel.svg" alt=""></a>
-                <a class="search_top" onclick="$('.search').toggle('slow');"><img src="/img/svg/search.svg" alt=""></a>
-                <a class="favorites_top" href=""><img src="/img/svg/like.svg" alt="">
+                <a href=""><img class="logo_top" src="./img/svg/logo_top.svg" alt=""></a>
+                <a class="number_top" href="tel:+74955324941"><img src="./img/svg/tel.svg" alt=""></a>
+                <a class="search_top" onclick="$('.search').toggle('slow');"><img src="./img/svg/search.svg" alt=""></a>
+                <a class="favorites_top" href=""><img src="./img/svg/like.svg" alt="">
                     <div class="circle_counter">2</div>
                 </a>
-                <a class="basket_top" href=""><img src="/img/svg/basket.svg" alt="">
+                <a class="basket_top" href=""><img src="./img/svg/basket.svg" alt="">
                     <div class="circle_counter">1</div>
                 </a>
             </div>
@@ -351,7 +351,7 @@
                         onclick="$('.favorite_popup').toggle('slow');" class="close"></span></div>
                 <div class="favorite_popup_cart">
                     <div class="favorite_popup_item">
-                        <div><img class="favorite_popup_img" src="/img/door_img.jpg" alt=""></div>
+                        <div><img class="favorite_popup_img" src="./img/door_img.jpg" alt=""></div>
                         <div>
                             <div class="favorite_popup_item_text">Межкомнатная дверь Вена ПО (Мокко глянец /Сатинат)
                             </div>
@@ -361,7 +361,7 @@
                 </div>
                 <div class="favorite_popup_cart">
                     <div class="favorite_popup_item">
-                        <div><img class="favorite_popup_img" src="/img/door_img.jpg" alt=""></div>
+                        <div><img class="favorite_popup_img" src="./img/door_img.jpg" alt=""></div>
                         <div>
                             <div class="favorite_popup_item_text">Межкомнатная дверь Вена ПО (Мокко глянец /Сатинат)
                             </div>
@@ -377,7 +377,7 @@
                 <div class="cart_popup_a"><a href="">Посмотреть</a></div>
                 <div class="cart_popup_content">
                     <div class="cart_popup_item">
-                        <div style="position: relative;"><img class="cart_popup_img" src="/img/door_img.jpg" alt="">
+                        <div style="position: relative;"><img class="cart_popup_img" src="./img/door_img.jpg" alt="">
                             <div class="circle_percent">-25%</div>
                         </div>
                         <div>
@@ -418,27 +418,27 @@
             </div>
             <section class="color_blocks">
                 <div class="color_block">
-                    <a href=""> <img src="/img/black.jpg" alt=""></a>
+                    <a href=""> <img src="./img/black.jpg" alt=""></a>
                     <div class="color_blocks_name">Черные</div>
                 </div>
                 <div class="color_block">
-                    <a href=""> <img src="/img/red.jpg" alt=""></a>
+                    <a href=""> <img src="./img/red.jpg" alt=""></a>
                     <div class="color_blocks_name">Красное дерево</div>
                 </div>
                 <div class="color_block">
-                    <a href=""> <img src="/img/brown.jpg" alt=""></a>
+                    <a href=""> <img src="./img/brown.jpg" alt=""></a>
                     <div class="color_blocks_name">Каштан</div>
                 </div>
                 <div class="color_block">
-                    <a href=""> <img src="/img/venge.jpg" alt=""></a>
+                    <a href=""> <img src="./img/venge.jpg" alt=""></a>
                     <div class="color_blocks_name">Венге</div>
                 </div>
                 <div class="color_block">
-                    <a href=""> <img src="/img/dyb.jpg" alt=""></a>
+                    <a href=""> <img src="./img/dyb.jpg" alt=""></a>
                     <div class="color_blocks_name">Мореный дуб</div>
                 </div>
                 <div class="color_block">
-                    <a href=""> <img src="/img/dark_dyb.jpg" alt=""></a>
+                    <a href=""> <img src="./img/dark_dyb.jpg" alt=""></a>
                     <div class="color_blocks_name">Темный дуб</div>
                 </div>
             </section>
@@ -480,7 +480,7 @@
                         class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -499,7 +499,7 @@
                         class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -518,7 +518,7 @@
                         class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -537,7 +537,7 @@
                         class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -556,7 +556,7 @@
                         class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -575,7 +575,7 @@
                         class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -594,7 +594,7 @@
                         class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -613,7 +613,7 @@
                         class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -632,7 +632,7 @@
                         class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -651,7 +651,7 @@
                         class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -714,28 +714,28 @@
             <h1 class="section_title">Каталог дверей</h1>
             <div class="catalog_content">
                 <div class="catalog_item">
-                    <div style="background: url(/img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
+                    <div style="background: url(./img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
                         <img src="" alt="">
                         <a class="fool_a" href=""></a>
                     </div>
                     <a class="catalog_item_text" href="">Двери Капель</a>
                 </div>
                 <div class="catalog_item">
-                    <div style="background: url(/img/company2.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
+                    <div style="background: url(./img/company2.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
                         <img src="" alt="">
                         <a class="fool_a" href=""></a>
                     </div>
                     <a class="catalog_item_text" href="">Двери Белорусские</a>
                 </div>
                 <div class="catalog_item">
-                    <div style="background: url(/img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
+                    <div style="background: url(./img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
                         <img src="" alt="">
                         <a class="fool_a" href=""></a>
                     </div>
                     <a class="catalog_item_text" href="">Двери Капель</a>
                 </div>
                 <div class="catalog_item">
-                    <div style="background: url(/img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
+                    <div style="background: url(./img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
                         <img src="" alt="">
                         <a class="fool_a" href=""></a>
                     </div>
@@ -815,11 +815,11 @@
             <div class="footer_social">
                 <div style="text-align: center;" class="footer_title">Мы в соцсетях:</div>
                 <div class="footer_social_content">
-                    <a class="footer_social_item" href=""><img src="/img/svg/fb.svg" alt=""></a>
-                    <a class="footer_social_item" href=""><img src="/img/svg/vk.svg" alt=""></a>
-                    <a class="footer_social_item" href=""><img src="/img/svg/tr.svg" alt=""></a>
-                    <a class="footer_social_item" href=""><img src="/img/svg/inst.svg" alt=""></a>
-                    <a class="footer_social_item" href=""><img src="/img/svg/yt.svg" alt=""></a>
+                    <a class="footer_social_item" href=""><img src="./img/svg/fb.svg" alt=""></a>
+                    <a class="footer_social_item" href=""><img src="./img/svg/vk.svg" alt=""></a>
+                    <a class="footer_social_item" href=""><img src="./img/svg/tr.svg" alt=""></a>
+                    <a class="footer_social_item" href=""><img src="./img/svg/inst.svg" alt=""></a>
+                    <a class="footer_social_item" href=""><img src="./img/svg/yt.svg" alt=""></a>
                 </div>
             </div>
             <div class="footer_cop">
@@ -856,7 +856,7 @@
                 <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                 <div class="label label_orange">Под заказ</div>
                 <div class="label label_green">На складе</div>
-                <a href=""><img class="doors_cart_img big" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                <a href=""><img class="doors_cart_img big" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                         title="Вена ПО (Мокко глянец /Сатинат)"></a>
                 <a class="doors_cart_title big" href="">Межкомнатная дверь Вена ПО (Мокко глянец /Сатинат)</a>
                 <div class="doors_cart_btns big">
