--- a/doors/furniturecatalog.html
+++ b/doors/furniturecatalog.html
@@ -15,7 +15,7 @@
         <div class="sidenav_wrapper">
             <div class="nav_top">
                 <div href="javascript:void(0)" class="closebtn" onclick="closeNav()"></div>
-                <a href=""><img src="/img/svg/logo_top.svg" alt=""></a>
+                <a href=""><img src="./img/svg/logo_top.svg" alt=""></a>
             </div>
             <div class="sidenav_content">
                 <div class="sidenav_phones">
@@ -228,7 +228,7 @@
         <div class="sidenav_wrapper">
             <div class="nav_top">
                 <div href="javascript:void(0)" class="closebtn" onclick="closeNav1()"></div>
-                <a href=""><img src="/img/svg/logo_top.svg" alt=""></a>
+                <a href=""><img src="./img/svg/logo_top.svg" alt=""></a>
             </div>
             <div class="sidenav_content">
                 <div class="sidenav_filter_menu">
@@ -328,13 +328,13 @@
         <nav>
             <div class="wrapper nav">
                 <div onclick="openNav()" class="burger"></div>
-                <a href=""><img class="logo_top" src="/img/svg/logo_top.svg" alt=""></a>
-                <a class="number_top" href="tel:+74955324941"><img src="/img/svg/tel.svg" alt=""></a>
-                <a class="search_top" onclick="$('.search').toggle('slow');"><img src="/img/svg/search.svg" alt=""></a>
-                <a class="favorites_top" href=""><img src="/img/svg/like.svg" alt="">
+                <a href=""><img class="logo_top" src="./img/svg/logo_top.svg" alt=""></a>
+                <a class="number_top" href="tel:+74955324941"><img src="./img/svg/tel.svg" alt=""></a>
+                <a class="search_top" onclick="$('.search').toggle('slow');"><img src="./img/svg/search.svg" alt=""></a>
+                <a class="favorites_top" href=""><img src="./img/svg/like.svg" alt="">
                     <div class="circle_counter">2</div>
                 </a>
-                <a class="basket_top" href=""><img src="/img/svg/basket.svg" alt="">
+                <a class="basket_top" href=""><img src="./img/svg/basket.svg" alt="">
                     <div class="circle_counter">1</div>
                 </a>
             </div>
@@ -348,7 +348,7 @@
                         onclick="$('.favorite_popup').toggle('slow');" class="close"></span></div>
                 <div class="favorite_popup_cart">
                     <div class="favorite_popup_item">
-                        <div><img class="favorite_popup_img" src="/img/door_img.jpg" alt=""></div>
+                        <div><img class="favorite_popup_img" src="./img/door_img.jpg" alt=""></div>
                         <div>
                             <div class="favorite_popup_item_text">Межкомнатная дверь Вена ПО (Мокко глянец /Сатинат)
                             </div>
@@ -358,7 +358,7 @@
                 </div>
                 <div class="favorite_popup_cart">
                     <div class="favorite_popup_item">
-                        <div><img class="favorite_popup_img" src="/img/door_img.jpg" alt=""></div>
+                        <div><img class="favorite_popup_img" src="./img/door_img.jpg" alt=""></div>
                         <div>
                             <div class="favorite_popup_item_text">Межкомнатная дверь Вена ПО (Мокко глянец /Сатинат)
                             </div>
@@ -374,7 +374,7 @@
                 <div class="cart_popup_a"><a href="">Посмотреть</a></div>
                 <div class="cart_popup_content">
                     <div class="cart_popup_item">
-                        <div style="position: relative;"><img class="cart_popup_img" src="/img/door_img.jpg" alt="">
+                        <div style="position: relative;"><img class="cart_popup_img" src="./img/door_img.jpg" alt="">
                             <div class="circle_percent">-25%</div>
                         </div>
                         <div>
@@ -405,35 +405,35 @@
                 <div class="wrapper">
                 <div class="reviewsbysection_content">
                     <a href="" class="reviewsbysection_item">
-                        <img src="/img/vantage.jpg" alt="">
+                        <img src="./img/vantage.jpg" alt="">
                         <div style="font-size: 11px; line-height: 125%;" class="reviewsbysection_text">Vantage</div>
                     </a>
                     <a href="" class="reviewsbysection_item">
-                        <img src="/img/morelli.jpg" alt="">
+                        <img src="./img/morelli.jpg" alt="">
                         <div style="font-size: 11px; line-height: 125%;" class="reviewsbysection_text">Morelli</div>
                     </a>
                     <a href="" class="reviewsbysection_item">
-                        <img src="/img/renz.jpg" alt="">
+                        <img src="./img/renz.jpg" alt="">
                         <div style="font-size: 11px; line-height: 125%;" class="reviewsbysection_text">Renz</div>
                     </a>
                     <a href="" class="reviewsbysection_item">
-                        <img src="/img/archie.jpg" alt="">
+                        <img src="./img/archie.jpg" alt="">
                         <div style="font-size: 11px; line-height: 125%;" class="reviewsbysection_text">Archie</div>
                     </a>
                     <a href="" class="reviewsbysection_item">
-                        <img src="/img/palidore.jpg" alt="">
+                        <img src="./img/palidore.jpg" alt="">
                         <div style="font-size: 11px; line-height: 125%;" class="reviewsbysection_text">Palidore</div>
                     </a>
                     <a href="" class="reviewsbysection_item">
-                        <img src="/img/rucetti.jpg" alt="">
+                        <img src="./img/rucetti.jpg" alt="">
                         <div style="font-size: 11px; line-height: 125%;" class="reviewsbysection_text">Rucetti</div>
                     </a>
                     <a href="" class="reviewsbysection_item">
-                        <img src="/img/punto.jpg" alt="">
+                        <img src="./img/punto.jpg" alt="">
                         <div style="font-size: 11px; line-height: 125%;" class="reviewsbysection_text">Punto</div>
                     </a>
                     <a href="" class="reviewsbysection_item">
-                        <img src="/img/armadillo.jpg" alt="">
+                        <img src="./img/armadillo.jpg" alt="">
                         <div style="font-size: 11px; line-height: 125%;" class="reviewsbysection_text">Armadilo</div>
                     </a>
                 </div>
@@ -463,7 +463,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/mjm.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/mjm.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">V01BL (Черный с патиной)</a>
                     <div class="doors_cert_price">
@@ -480,7 +480,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/jmj.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/jmj.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">V01D (Матовый никель)</a>
                     <div class="doors_cert_price">
@@ -496,7 +496,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/mjm.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/mjm.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">V01BL (Черный с патиной)</a>
                     <div class="doors_cert_price">
@@ -513,7 +513,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/jmj.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/jmj.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">V01D (Матовый никель)</a>
                     <div class="doors_cert_price">
@@ -529,7 +529,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/mjm.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/mjm.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">V01BL (Черный с патиной)</a>
                     <div class="doors_cert_price">
@@ -546,7 +546,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/jmj.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/jmj.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">V01D (Матовый никель)</a>
                     <div class="doors_cert_price">
@@ -562,7 +562,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/mjm.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/mjm.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">V01BL (Черный с патиной)</a>
                     <div class="doors_cert_price">
@@ -579,7 +579,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/jmj.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/jmj.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">V01D (Матовый никель)</a>
                     <div class="doors_cert_price">
@@ -595,7 +595,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/mjm.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/mjm.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">V01BL (Черный с патиной)</a>
                     <div class="doors_cert_price">
@@ -612,7 +612,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/jmj.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/jmj.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">V01D (Матовый никель)</a>
                     <div class="doors_cert_price">
@@ -647,28 +647,28 @@
         <h1 class="section_title">Каталог дверей</h1>
         <div class="catalog_content">
             <div class="catalog_item">
-                <div style="background: url(/img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
+                <div style="background: url(./img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
                     <img src="" alt="">
                     <a class="fool_a" href=""></a>
                 </div>
                 <a class="catalog_item_text" href="">Двери Капель</a>
             </div>
             <div class="catalog_item">
-                <div style="background: url(/img/company2.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
+                <div style="background: url(./img/company2.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
                     <img src="" alt="">
                     <a class="fool_a" href=""></a>
                 </div>
                 <a class="catalog_item_text" href="">Двери Белорусские</a>
             </div>
             <div class="catalog_item">
-                <div style="background: url(/img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
+                <div style="background: url(./img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
                     <img src="" alt="">
                     <a class="fool_a" href=""></a>
                 </div>
                 <a class="catalog_item_text" href="">Двери Капель</a>
             </div>
             <div class="catalog_item">
-                <div style="background: url(/img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
+                <div style="background: url(./img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
                     <img src="" alt="">
                     <a class="fool_a" href=""></a>
                 </div>
@@ -748,11 +748,11 @@
             <div class="footer_social">
                 <div style="text-align: center;" class="footer_title">Мы в соцсетях:</div>
                 <div class="footer_social_content">
-                    <a class="footer_social_item" href=""><img src="/img/svg/fb.svg" alt=""></a>
-                    <a class="footer_social_item" href=""><img src="/img/svg/vk.svg" alt=""></a>
-                    <a class="footer_social_item" href=""><img src="/img/svg/tr.svg" alt=""></a>
-                    <a class="footer_social_item" href=""><img src="/img/svg/inst.svg" alt=""></a>
-                    <a class="footer_social_item" href=""><img src="/img/svg/yt.svg" alt=""></a>
+                    <a class="footer_social_item" href=""><img src="./img/svg/fb.svg" alt=""></a>
+                    <a class="footer_social_item" href=""><img src="./img/svg/vk.svg" alt=""></a>
+                    <a class="footer_social_item" href=""><img src="./img/svg/tr.svg" alt=""></a>
+                    <a class="footer_social_item" href=""><img src="./img/svg/inst.svg" alt=""></a>
+                    <a class="footer_social_item" href=""><img src="./img/svg/yt.svg" alt=""></a>
                 </div>
             </div>
             <div class="footer_cop">
@@ -788,7 +788,7 @@
                 <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                 <div class="label label_orange">Под заказ</div>
                 <div class="label label_green">На складе</div>
-                <a href=""><img class="doors_cart_img big" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                <a href=""><img class="doors_cart_img big" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                         title="Вена ПО (Мокко глянец /Сатинат)"></a>
                 <a class="doors_cart_title big" href="">Межкомнатная дверь Вена ПО (Мокко глянец /Сатинат)</a>
                 <div class="doors_cart_btns big">
