--- a/doors/basket.html
+++ b/doors/basket.html
@@ -16,7 +16,7 @@
         <div class="sidenav_wrapper">
             <div class="nav_top">
                 <div href="javascript:void(0)" class="closebtn" onclick="closeNav()"></div>
-                <a href=""><img src="/img/svg/logo_top.svg" alt=""></a>
+                <a href=""><img src="./img/svg/logo_top.svg" alt=""></a>
             </div>
             <div class="sidenav_content">
                 <div class="sidenav_phones">
@@ -232,13 +232,13 @@
         <nav>
             <div class="wrapper nav">
                 <div onclick="openNav()" class="burger"></div>
-                <a href=""><img class="logo_top" src="/img/svg/logo_top.svg" alt=""></a>
-                <a class="number_top" href="tel:+74955324941"><img src="/img/svg/tel.svg" alt=""></a>
-                <a class="search_top" onclick="$('.search').toggle('slow');"><img src="/img/svg/search.svg" alt=""></a>
-                <a class="favorites_top" href=""><img src="/img/svg/like.svg" alt="">
+                <a href=""><img class="logo_top" src="./img/svg/logo_top.svg" alt=""></a>
+                <a class="number_top" href="tel:+74955324941"><img src="./img/svg/tel.svg" alt=""></a>
+                <a class="search_top" onclick="$('.search').toggle('slow');"><img src="./img/svg/search.svg" alt=""></a>
+                <a class="favorites_top" href=""><img src="./img/svg/like.svg" alt="">
                     <div class="circle_counter">2</div>
                 </a>
-                <a class="basket_top" href=""><img src="/img/svg/basket.svg" alt="">
+                <a class="basket_top" href=""><img src="./img/svg/basket.svg" alt="">
                     <div class="circle_counter">1</div>
                 </a>
             </div>
@@ -252,7 +252,7 @@
                         onclick="$('.favorite_popup').toggle('slow');" class="close"></span></div>
                 <div class="favorite_popup_cart">
                     <div class="favorite_popup_item">
-                        <div><img class="favorite_popup_img" src="/img/door_img.jpg" alt=""></div>
+                        <div><img class="favorite_popup_img" src="./img/door_img.jpg" alt=""></div>
                         <div>
                             <div class="favorite_popup_item_text">Межкомнатная дверь Вена ПО (Мокко глянец /Сатинат)
                             </div>
@@ -262,7 +262,7 @@
                 </div>
                 <div class="favorite_popup_cart">
                     <div class="favorite_popup_item">
-                        <div><img class="favorite_popup_img" src="/img/door_img.jpg" alt=""></div>
+                        <div><img class="favorite_popup_img" src="./img/door_img.jpg" alt=""></div>
                         <div>
                             <div class="favorite_popup_item_text">Межкомнатная дверь Вена ПО (Мокко глянец /Сатинат)
                             </div>
@@ -278,7 +278,7 @@
                 <div class="cart_popup_a"><a href="">Посмотреть</a></div>
                 <div class="cart_popup_content">
                     <div class="cart_popup_item">
-                        <div style="position: relative;"><img class="cart_popup_img" src="/img/door_img.jpg" alt="">
+                        <div style="position: relative;"><img class="cart_popup_img" src="./img/door_img.jpg" alt="">
                             <div class="circle_percent">-25%</div>
                         </div>
                         <div>
@@ -311,7 +311,7 @@
         <div class="wrapper">
             <div class="basket_wrap">
                 <div class="basket_wrap_top flexbox">
-                    <img src="/img/door_img.jpg" alt=""> <div class="basket_wrap_top_name">Вена ПО (Мокко глянец /Сатинат)</div> 
+                    <img src="./img/door_img.jpg" alt=""> <div class="basket_wrap_top_name">Вена ПО (Мокко глянец /Сатинат)</div> 
                     <div class="red_close"></div>
                 </div>
                 <div class="basket_wrap_bottom flexbox">
