--- a/doors/manufacture-doors.html
+++ b/doors/manufacture-doors.html
@@ -15,7 +15,7 @@
         <div class="sidenav_wrapper">
             <div class="nav_top">
                 <div href="javascript:void(0)" class="closebtn" onclick="closeNav()"></div>
-                <a href=""><img src="/img/svg/logo_top.svg" alt=""></a>
+                <a href=""><img src="./img/svg/logo_top.svg" alt=""></a>
             </div>
             <div class="sidenav_content">
                 <div class="sidenav_phones">
@@ -24,9 +24,9 @@
                     <div class="sidenav_number_text">ежедневно с 10.00 до 20.00</div>
                 </div>
                 <div class="sidenav_phones_btns">
-                    <img onclick="$('.popup_all').toggle('slow');" src="/img/svg/call_small.svg" alt="">
+                    <img onclick="$('.popup_all').toggle('slow');" src="./img/svg/call_small.svg" alt="">
                     <button onclick="$('.popup_all').toggle('slow');" class="btn_recall">Заказать звонок</button>
-                    <img src="/img/svg/zamer_small.svg" alt="">
+                    <img src="./img/svg/zamer_small.svg" alt="">
                     <button class="btn_measure">Замер</button>
                 </div>
                 <div class="sidenav_delivery">
@@ -230,7 +230,7 @@
         <div class="sidenav_wrapper">
             <div class="nav_top">
                 <div href="javascript:void(0)" class="closebtn" onclick="closeNav1()"></div>
-                <a href=""><img src="/img/svg/logo_top.svg" alt=""></a>
+                <a href=""><img src="./img/svg/logo_top.svg" alt=""></a>
             </div>
             <div class="sidenav_content">
                 <div class="sidenav_filter_menu">
@@ -404,13 +404,13 @@
         <nav>
             <div class="wrapper nav">
                 <div onclick="openNav()" class="burger"></div>
-                <a href=""><img class="logo_top" src="/img/svg/logo_top.svg" alt=""></a>
-                <a class="number_top" href="tel:+74955324941"><img src="/img/svg/tel.svg" alt=""></a>
-                <a class="search_top" onclick="$('.search').toggle('slow');"><img src="/img/svg/search.svg" alt=""></a>
-                <a class="favorites_top" href=""><img src="/img/svg/like.svg" alt="">
+                <a href=""><img class="logo_top" src="./img/svg/logo_top.svg" alt=""></a>
+                <a class="number_top" href="tel:+74955324941"><img src="./img/svg/tel.svg" alt=""></a>
+                <a class="search_top" onclick="$('.search').toggle('slow');"><img src="./img/svg/search.svg" alt=""></a>
+                <a class="favorites_top" href=""><img src="./img/svg/like.svg" alt="">
                     <div class="circle_counter">2</div>
                 </a>
-                <a class="basket_top" href=""><img src="/img/svg/basket.svg" alt="">
+                <a class="basket_top" href=""><img src="./img/svg/basket.svg" alt="">
                     <div class="circle_counter">1</div>
                 </a>
             </div>
@@ -424,7 +424,7 @@
                         onclick="$('.favorite_popup').toggle('slow');" class="close"></span></div>
                 <div class="favorite_popup_cart">
                     <div class="favorite_popup_item">
-                        <div><img class="favorite_popup_img" src="/img/door_img.jpg" alt=""></div>
+                        <div><img class="favorite_popup_img" src="./img/door_img.jpg" alt=""></div>
                         <div>
                             <div class="favorite_popup_item_text">Межкомнатная дверь Вена ПО (Мокко глянец /Сатинат)
                             </div>
@@ -434,7 +434,7 @@
                 </div>
                 <div class="favorite_popup_cart">
                     <div class="favorite_popup_item">
-                        <div><img class="favorite_popup_img" src="/img/door_img.jpg" alt=""></div>
+                        <div><img class="favorite_popup_img" src="./img/door_img.jpg" alt=""></div>
                         <div>
                             <div class="favorite_popup_item_text">Межкомнатная дверь Вена ПО (Мокко глянец /Сатинат)
                             </div>
@@ -450,7 +450,7 @@
                 <div class="cart_popup_a"><a href="">Посмотреть</a></div>
                 <div class="cart_popup_content">
                     <div class="cart_popup_item">
-                        <div style="position: relative;"><img class="cart_popup_img" src="/img/door_img.jpg" alt="">
+                        <div style="position: relative;"><img class="cart_popup_img" src="./img/door_img.jpg" alt="">
                             <div class="circle_percent">-25%</div>
                         </div>
                         <div>
@@ -502,7 +502,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -519,7 +519,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -536,7 +536,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -553,7 +553,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -570,7 +570,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -587,7 +587,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -604,7 +604,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -621,7 +621,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -638,7 +638,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -655,7 +655,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -709,28 +709,28 @@
             <h1 class="section_title">Каталог дверей</h1>
             <div class="catalog_content">
                 <div class="catalog_item">
-                    <div style="background: url(/img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
+                    <div style="background: url(./img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
                         <img src="" alt="">
                         <a class="fool_a" href=""></a>
                     </div>
                     <a class="catalog_item_text" href="">Двери Капель</a>
                 </div>
                 <div class="catalog_item">
-                    <div style="background: url(/img/company2.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
+                    <div style="background: url(./img/company2.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
                         <img src="" alt="">
                         <a class="fool_a" href=""></a>
                     </div>
                     <a class="catalog_item_text" href="">Двери Белорусские</a>
                 </div>
                 <div class="catalog_item">
-                    <div style="background: url(/img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
+                    <div style="background: url(./img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
                         <img src="" alt="">
                         <a class="fool_a" href=""></a>
                     </div>
                     <a class="catalog_item_text" href="">Двери Капель</a>
                 </div>
                 <div class="catalog_item">
-                    <div style="background: url(/img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
+                    <div style="background: url(./img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
                         <img src="" alt="">
                         <a class="fool_a" href=""></a>
                     </div>
@@ -810,11 +810,11 @@
             <div class="footer_social">
                 <div style="text-align: center;" class="footer_title">Мы в соцсетях:</div>
                 <div class="footer_social_content">
-                    <a class="footer_social_item" href=""><img src="/img/svg/fb.svg" alt=""></a>
-                    <a class="footer_social_item" href=""><img src="/img/svg/vk.svg" alt=""></a>
-                    <a class="footer_social_item" href=""><img src="/img/svg/tr.svg" alt=""></a>
-                    <a class="footer_social_item" href=""><img src="/img/svg/inst.svg" alt=""></a>
-                    <a class="footer_social_item" href=""><img src="/img/svg/yt.svg" alt=""></a>
+                    <a class="footer_social_item" href=""><img src="./img/svg/fb.svg" alt=""></a>
+                    <a class="footer_social_item" href=""><img src="./img/svg/vk.svg" alt=""></a>
+                    <a class="footer_social_item" href=""><img src="./img/svg/tr.svg" alt=""></a>
+                    <a class="footer_social_item" href=""><img src="./img/svg/inst.svg" alt=""></a>
+                    <a class="footer_social_item" href=""><img src="./img/svg/yt.svg" alt=""></a>
                 </div>
             </div>
             <div class="footer_cop">
@@ -849,7 +849,7 @@
             <div class="wrapper">
                 <div class="popup_all_title" style="text-align: left;">Быстрый заказ</div>
                 <div class="cart_popup_item">
-                    <div style="position: relative;"><img class="cart_popup_img" src="/img/door_img.jpg" alt="">
+                    <div style="position: relative;"><img class="cart_popup_img" src="./img/door_img.jpg" alt="">
                     </div>
                     <div>
                         <div class="cart_popup_item_text">Межкомнатная дверь Вена ПО (Мокко глянец /Сатинат)</div>
@@ -881,7 +881,7 @@
                 <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                 <div class="label label_orange">Под заказ</div>
                 <div class="label label_green">На складе</div>
-                <a href=""><img class="doors_cart_img big" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                <a href=""><img class="doors_cart_img big" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                         title="Вена ПО (Мокко глянец /Сатинат)"></a>
                 <a class="doors_cart_title big" href="">Межкомнатная дверь Вена ПО (Мокко глянец /Сатинат)</a>
                 <div class="doors_cart_btns big">
