--- a/doors/sales.html
+++ b/doors/sales.html
@@ -15,7 +15,7 @@
         <div class="sidenav_wrapper">
             <div class="nav_top">
                 <div href="javascript:void(0)" class="closebtn" onclick="closeNav()"></div>
-                <a href=""><img src="/img/svg/logo_top.svg" alt=""></a>
+                <a href=""><img src="./img/svg/logo_top.svg" alt=""></a>
             </div>
             <div class="sidenav_content">
                 <div class="sidenav_phones">
@@ -231,13 +231,13 @@
         <nav>
             <div class="wrapper nav">
                 <div onclick="openNav()" class="burger"></div>
-                <a href=""><img class="logo_top" src="/img/svg/logo_top.svg" alt=""></a>
-                <a class="number_top" href="tel:+74955324941"><img src="/img/svg/tel.svg" alt=""></a>
-                <a class="search_top" onclick="$('.search').toggle('slow');"><img src="/img/svg/search.svg" alt=""></a>
-                <a class="favorites_top" href=""><img src="/img/svg/like.svg" alt="">
+                <a href=""><img class="logo_top" src="./img/svg/logo_top.svg" alt=""></a>
+                <a class="number_top" href="tel:+74955324941"><img src="./img/svg/tel.svg" alt=""></a>
+                <a class="search_top" onclick="$('.search').toggle('slow');"><img src="./img/svg/search.svg" alt=""></a>
+                <a class="favorites_top" href=""><img src="./img/svg/like.svg" alt="">
                     <div class="circle_counter">2</div>
                 </a>
-                <a class="basket_top" href=""><img src="/img/svg/basket.svg" alt="">
+                <a class="basket_top" href=""><img src="./img/svg/basket.svg" alt="">
                     <div class="circle_counter">1</div>
                 </a>
             </div>
@@ -251,7 +251,7 @@
                         onclick="$('.favorite_popup').toggle('slow');" class="close"></span></div>
                 <div class="favorite_popup_cart">
                     <div class="favorite_popup_item">
-                        <div><img class="favorite_popup_img" src="/img/door_img.jpg" alt=""></div>
+                        <div><img class="favorite_popup_img" src="./img/door_img.jpg" alt=""></div>
                         <div>
                             <div class="favorite_popup_item_text">Межкомнатная дверь Вена ПО (Мокко глянец /Сатинат)
                             </div>
@@ -261,7 +261,7 @@
                 </div>
                 <div class="favorite_popup_cart">
                     <div class="favorite_popup_item">
-                        <div><img class="favorite_popup_img" src="/img/door_img.jpg" alt=""></div>
+                        <div><img class="favorite_popup_img" src="./img/door_img.jpg" alt=""></div>
                         <div>
                             <div class="favorite_popup_item_text">Межкомнатная дверь Вена ПО (Мокко глянец /Сатинат)
                             </div>
@@ -277,7 +277,7 @@
                 <div class="cart_popup_a"><a href="">Посмотреть</a></div>
                 <div class="cart_popup_content">
                     <div class="cart_popup_item">
-                        <div style="position: relative;"><img class="cart_popup_img" src="/img/door_img.jpg" alt="">
+                        <div style="position: relative;"><img class="cart_popup_img" src="./img/door_img.jpg" alt="">
                             <div class="circle_percent">-25%</div>
                         </div>
                         <div>
@@ -313,7 +313,7 @@
                     <div class="news_title">Фурнитура на Ульяновские двери 
                         Люксор в подарок!</div>
                     <div class="news_item_center">
-                        <img src="/img/sale.jpg" alt="">
+                        <img src="./img/sale.jpg" alt="">
                     </div>
                     <div class="news_item_bottom">
                         <span>27.06.2020</span> <a href="">Подробнее</a>
@@ -323,7 +323,7 @@
                     <div class="news_title">Стандартная установка дверей 
                         в подарок!!!</div>
                     <div class="news_item_center">
-                        <img src="/img/sale1.jpg" alt="">
+                        <img src="./img/sale1.jpg" alt="">
                     </div>
                     <div class="news_item_bottom">
                         <span>27.06.2020</span> <a href="">Подробнее</a>
@@ -333,7 +333,7 @@
                     <div class="news_title">При покупке от 5 дверей 
                         доставка по Москве бесплатно</div>
                     <div class="news_item_center">
-                        <img src="/img/news1.jpg" alt="">
+                        <img src="./img/news1.jpg" alt="">
                     </div>
                     <div class="news_item_bottom">
                         <span>27.06.2020</span> <a href="">Подробнее</a>
@@ -343,7 +343,7 @@
                     <div class="news_title">При покупке от 5 дверей 
                         доставка по Москве бесплатно</div>
                     <div class="news_item_center">
-                        <img src="/img/sale2.jpg" alt="">
+                        <img src="./img/sale2.jpg" alt="">
                     </div>
                     <div class="news_item_bottom">
                         <span>27.06.2020</span> <a href="">Подробнее</a>
@@ -352,7 +352,7 @@
                 <div class="news_item">
                     <div class="news_title">Подарки нашим клиентам</div>
                     <div class="news_item_center">
-                        <img src="/img/sale3.jpg" alt="">
+                        <img src="./img/sale3.jpg" alt="">
                     </div>
                     <div class="news_item_bottom">
                         <span>27.06.2020</span> <a href="">Подробнее</a>
@@ -361,7 +361,7 @@
                 <div class="news_item">
                     <div class="news_title">Распродажа шпонированных дверей</div>
                     <div class="news_item_center">
-                        <img src="/img/sale4.jpg" alt="">
+                        <img src="./img/sale4.jpg" alt="">
                     </div>
                     <div class="news_item_bottom">
                         <span>27.06.2020</span> <a href="">Подробнее</a>
@@ -376,28 +376,28 @@
             <h1 class="section_title">Каталог дверей</h1>
             <div class="catalog_content">
                 <div class="catalog_item">
-                    <div style="background: url(/img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
+                    <div style="background: url(./img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
                         <img src="" alt="">
                         <a class="fool_a" href=""></a>
                     </div>
                     <a class="catalog_item_text" href="">Двери Капель</a>
                 </div>
                 <div class="catalog_item">
-                    <div style="background: url(/img/company2.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
+                    <div style="background: url(./img/company2.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
                         <img src="" alt="">
                         <a class="fool_a" href=""></a>
                     </div>
                     <a class="catalog_item_text" href="">Двери Белорусские</a>
                 </div>
                 <div class="catalog_item">
-                    <div style="background: url(/img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
+                    <div style="background: url(./img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
                         <img src="" alt="">
                         <a class="fool_a" href=""></a>
                     </div>
                     <a class="catalog_item_text" href="">Двери Капель</a>
                 </div>
                 <div class="catalog_item">
-                    <div style="background: url(/img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
+                    <div style="background: url(./img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
                         <img src="" alt="">
                         <a class="fool_a" href=""></a>
                     </div>
@@ -477,11 +477,11 @@
             <div class="footer_social">
                 <div style="text-align: center;" class="footer_title">Мы в соцсетях:</div>
                 <div class="footer_social_content">
-                    <a class="footer_social_item" href=""><img src="/img/svg/fb.svg" alt=""></a>
-                    <a class="footer_social_item" href=""><img src="/img/svg/vk.svg" alt=""></a>
-                    <a class="footer_social_item" href=""><img src="/img/svg/tr.svg" alt=""></a>
-                    <a class="footer_social_item" href=""><img src="/img/svg/inst.svg" alt=""></a>
-                    <a class="footer_social_item" href=""><img src="/img/svg/yt.svg" alt=""></a>
+                    <a class="footer_social_item" href=""><img src="./img/svg/fb.svg" alt=""></a>
+                    <a class="footer_social_item" href=""><img src="./img/svg/vk.svg" alt=""></a>
+                    <a class="footer_social_item" href=""><img src="./img/svg/tr.svg" alt=""></a>
+                    <a class="footer_social_item" href=""><img src="./img/svg/inst.svg" alt=""></a>
+                    <a class="footer_social_item" href=""><img src="./img/svg/yt.svg" alt=""></a>
                 </div>
             </div>
             <div class="footer_cop">
