--- a/doors/select.html
+++ b/doors/select.html
@@ -15,7 +15,7 @@
         <div class="sidenav_wrapper">
             <div class="nav_top">
                 <div href="javascript:void(0)" class="closebtn" onclick="closeNav()"></div>
-                <a href=""><img src="/img/svg/logo_top.svg" alt=""></a>
+                <a href=""><img src="./img/svg/logo_top.svg" alt=""></a>
             </div>
             <div class="sidenav_content">
                 <div class="sidenav_phones">
@@ -228,7 +228,7 @@
         <div class="sidenav_wrapper">
             <div class="nav_top">
                 <div href="javascript:void(0)" class="closebtn" onclick="closeNav1()"></div>
-                <a href=""><img src="/img/svg/logo_top.svg" alt=""></a>
+                <a href=""><img src="./img/svg/logo_top.svg" alt=""></a>
             </div>
             <div class="sidenav_content">
                 <div class="sidenav_filter_menu">
@@ -311,13 +311,13 @@
         <nav>
             <div class="wrapper nav">
                 <div onclick="openNav()" class="burger"></div>
-                <a href=""><img class="logo_top" src="/img/svg/logo_top.svg" alt=""></a>
-                <a class="number_top" href="tel:+74955324941"><img src="/img/svg/tel.svg" alt=""></a>
-                <a class="search_top" onclick="$('.search').toggle('slow');"><img src="/img/svg/search.svg" alt=""></a>
-                <a class="favorites_top" href=""><img src="/img/svg/like.svg" alt="">
+                <a href=""><img class="logo_top" src="./img/svg/logo_top.svg" alt=""></a>
+                <a class="number_top" href="tel:+74955324941"><img src="./img/svg/tel.svg" alt=""></a>
+                <a class="search_top" onclick="$('.search').toggle('slow');"><img src="./img/svg/search.svg" alt=""></a>
+                <a class="favorites_top" href=""><img src="./img/svg/like.svg" alt="">
                     <div class="circle_counter">2</div>
                 </a>
-                <a class="basket_top" href=""><img src="/img/svg/basket.svg" alt="">
+                <a class="basket_top" href=""><img src="./img/svg/basket.svg" alt="">
                     <div class="circle_counter">1</div>
                 </a>
             </div>
@@ -331,7 +331,7 @@
                         onclick="$('.favorite_popup').toggle('slow');" class="close"></span></div>
                 <div class="favorite_popup_cart">
                     <div class="favorite_popup_item">
-                        <div><img class="favorite_popup_img" src="/img/door_img.jpg" alt=""></div>
+                        <div><img class="favorite_popup_img" src="./img/door_img.jpg" alt=""></div>
                         <div>
                             <div class="favorite_popup_item_text">Межкомнатная дверь Вена ПО (Мокко глянец /Сатинат)
                             </div>
@@ -341,7 +341,7 @@
                 </div>
                 <div class="favorite_popup_cart">
                     <div class="favorite_popup_item">
-                        <div><img class="favorite_popup_img" src="/img/door_img.jpg" alt=""></div>
+                        <div><img class="favorite_popup_img" src="./img/door_img.jpg" alt=""></div>
                         <div>
                             <div class="favorite_popup_item_text">Межкомнатная дверь Вена ПО (Мокко глянец /Сатинат)
                             </div>
@@ -357,7 +357,7 @@
                 <div class="cart_popup_a"><a href="">Посмотреть</a></div>
                 <div class="cart_popup_content">
                     <div class="cart_popup_item">
-                        <div style="position: relative;"><img class="cart_popup_img" src="/img/door_img.jpg" alt="">
+                        <div style="position: relative;"><img class="cart_popup_img" src="./img/door_img.jpg" alt="">
                             <div class="circle_percent">-25%</div>
                         </div>
                         <div>
@@ -407,7 +407,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -424,7 +424,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -441,7 +441,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -458,7 +458,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -475,7 +475,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -492,7 +492,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -509,7 +509,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -526,7 +526,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -543,7 +543,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -560,7 +560,7 @@
                     <div onclick="$(this).parent().addClass('active'); $('.favorite_popup').toggle('slow');" class="favorite_icon"></div>
                     <div class="label label_orange">Под заказ</div>
                     <div class="label label_green">На складе</div>
-                    <a href=""><img class="doors_cart_img" src="/img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
+                    <a href=""><img class="doors_cart_img" src="./img/door_img.jpg" alt="Вена ПО (Мокко глянец /Сатинат)"
                             title="Вена ПО (Мокко глянец /Сатинат)"></a>
                     <a class="doors_cart_title" href="">Вена ПО (Мокко глянец /Сатинат)</a>
                     <div class="doors_cert_price">
@@ -583,28 +583,28 @@
             <h1 class="section_title">Каталог дверей</h1>
             <div class="catalog_content">
                 <div class="catalog_item">
-                    <div style="background: url(/img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
+                    <div style="background: url(./img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
                         <img src="" alt="">
                         <a class="fool_a" href=""></a>
                     </div>
                     <a class="catalog_item_text" href="">Двери Капель</a>
                 </div>
                 <div class="catalog_item">
-                    <div style="background: url(/img/company2.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
+                    <div style="background: url(./img/company2.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
                         <img src="" alt="">
                         <a class="fool_a" href=""></a>
                     </div>
                     <a class="catalog_item_text" href="">Двери Белорусские</a>
                 </div>
                 <div class="catalog_item">
-                    <div style="background: url(/img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
+                    <div style="background: url(./img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
                         <img src="" alt="">
                         <a class="fool_a" href=""></a>
                     </div>
                     <a class="catalog_item_text" href="">Двери Капель</a>
                 </div>
                 <div class="catalog_item">
-                    <div style="background: url(/img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
+                    <div style="background: url(./img/company1.jpg)  #FFFFFF center no-repeat;" class="catalog_item_top">
                         <img src="" alt="">
                         <a class="fool_a" href=""></a>
                     </div>
@@ -684,11 +684,11 @@
             <div class="footer_social">
                 <div style="text-align: center;" class="footer_title">Мы в соцсетях:</div>
                 <div class="footer_social_content">
-                    <a class="footer_social_item" href=""><img src="/img/svg/fb.svg" alt=""></a>
-                    <a class="footer_social_item" href=""><img src="/img/svg/vk.svg" alt=""></a>
-                    <a class="footer_social_item" href=""><img src="/img/svg/tr.svg" alt=""></a>
-                    <a class="footer_social_item" href=""><img src="/img/svg/inst.svg" alt=""></a>
-                    <a class="footer_social_item" href=""><img src="/img/svg/yt.svg" alt=""></a>
+                    <a class="footer_social_item" href=""><img src="./img/svg/fb.svg" alt=""></a>
+                    <a class="footer_social_item" href=""><img src="./img/svg/vk.svg" alt=""></a>
+                    <a class="footer_social_item" href=""><img src="./img/svg/tr.svg" alt=""></a>
+                    <a class="footer_social_item" href=""><img src="./img/svg/inst.svg" alt=""></a>
+                    <a class="footer_social_item" href=""><img src="./img/svg/yt.svg" alt=""></a>
                 </div>
             </div>
             <div class="footer_cop">
