--- a/doors/index.html
+++ b/doors/index.html
@@ -1135,11 +1135,11 @@
             document.getElementById("sidenav").style.width = "0";
         }
     </script>
-    <script src="/js/jquery-3.5.1.min.js"></script>
-    <script src="/js/number_plugin.min.js"></script>
-    <script src="/js/slick.min.js"></script>
-    <script src="/js/script.js"></script>
-    <script src="/js/jquery.simpleLoadMore.js"></script>
+    <script src="./js/jquery-3.5.1.min.js"></script>
+    <script src="./js/number_plugin.min.js"></script>
+    <script src="./js/slick.min.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/jquery.simpleLoadMore.js"></script>
     <script>
         $('.tab_door').simpleLoadMore({
         item: '.doors_cart',
