--- a/doors/cart.html
+++ b/doors/cart.html
@@ -1140,11 +1140,11 @@
             </div>
         </form>
     </div>
-    <script src="/js/jquery-3.5.1.min.js"></script>
-    <script src="/js/slick.min.js"></script>
-    <script src="/js/number_plugin.min.js"></script>
-    <script src="/js/script.js"></script>
-    <script src="/js/jquery.simpleLoadMore.js"></script>
+    <script src="./js/jquery-3.5.1.min.js"></script>
+    <script src="./js/slick.min.js"></script>
+    <script src="./js/number_plugin.min.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/jquery.simpleLoadMore.js"></script>
     <script>
         $('.doors_wrap').simpleLoadMore({
         item: '.doors_cart',
