--- a/doors/catalog.html
+++ b/doors/catalog.html
@@ -914,11 +914,11 @@
             document.getElementById("sidenav_filters").style.width = "0";
         }
     </script>
-    <script src="/js/jquery-3.5.1.min.js"></script>
-    <script src="/js/slick.min.js"></script>
-    <script src="/js/number_plugin.min.js"></script>
-    <script src="/js/script.js"></script>
-    <script src="/js/jquery.simpleLoadMore.js"></script>
+    <script src="./js/jquery-3.5.1.min.js"></script>
+    <script src="./js/slick.min.js"></script>
+    <script src="./js/number_plugin.min.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/jquery.simpleLoadMore.js"></script>
     <script>
         // $('.popup_all').toggle('slow');
 
