--- a/doors/order.html
+++ b/doors/order.html
@@ -628,9 +628,9 @@
             </div>
         </form>
     </div>
-    <script src="/js/jquery-3.5.1.min.js"></script>
-    <script src="/js/number_plugin.min.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="./js/jquery-3.5.1.min.js"></script>
+    <script src="./js/number_plugin.min.js"></script>
+    <script src="./js/script.js"></script>
 
     <script>
         function openNav() {
