--- a/doors/reviewpage.html
+++ b/doors/reviewpage.html
@@ -765,10 +765,10 @@
             </div>
     </div>
         </div>
-    <script src="/js/jquery-3.5.1.min.js"></script>
-    <script src="/js/number_plugin.min.js"></script>
-    <script src="/js/script.js"></script>
-    <script src="/js/jquery.simpleLoadMore.js"></script>
+    <script src="./js/jquery-3.5.1.min.js"></script>
+    <script src="./js/number_plugin.min.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/jquery.simpleLoadMore.js"></script>
     <script>
         $('.doors_wrap').simpleLoadMore({
         item: '.doors_cart',
