--- a/doors/cart.html
+++ b/doors/cart.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="fonts/stylesheet.css">
-    <link rel="stylesheet" href="/css/number_plugin.css">
+    <link rel="stylesheet" href="./css/number_plugin.css">
     <script src="https://kit.fontawesome.com/6b41d09341.js" crossorigin="anonymous"></script>
 </head>
 
