--- a/doors/contacts.html
+++ b/doors/contacts.html
@@ -7,7 +7,7 @@
     <title>«РФ-Двери.ру» — интернет-магазин межкомнатных дверей</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="fonts/stylesheet.css">
-    <link rel="stylesheet" href="/css/number_plugin.css">
+    <link rel="stylesheet" href="./css/number_plugin.css">
     <script src="https://kit.fontawesome.com/6b41d09341.js" crossorigin="anonymous"></script>
 </head>
 
