--- a/doors/news.html
+++ b/doors/news.html
@@ -7,7 +7,7 @@
     <title>«РФ-Двери.ру» — интернет-магазин межкомнатных дверей</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="fonts/stylesheet.css">
-    <link rel="stylesheet" href="/css/number_plugin.css">
+    <link rel="stylesheet" href="./css/number_plugin.css">
 </head>
 
 <body>
