--- a/2u/index.html
+++ b/2u/index.html
@@ -29,7 +29,7 @@
         }
         .hero__title{
             text-align: center;
-            font-weight: 700;
+            font-weight: bold;
             font-size: 42px;
             color: #343434;
         }
@@ -43,7 +43,7 @@
             display: inline-block;
             text-transform: uppercase;
             font-size: 14px;
-            font-weight: 700;
+            font-weight: bold;
             color: #ffffff;
             background-color: #5db4a8;
             padding: 10px 40px;
@@ -71,9 +71,20 @@
             font-size: 14px;
             text-decoration: none;
             border-radius: 30px;
-            font-weight: 700;
+            font-weight: bold;
             border: 2px solid #ffffff;
             padding: 5px 20px;
+        }
+        .benefits{
+            max-width: 640px;
+            width: 100%;
+            margin: 0 auto;
+        }
+        .benefits__text {
+            max-width: 180px;
+            font-size: 14px;
+            line-height: 22px;
+            padding-top: 22px;
         }
     </style>
 </head>
@@ -115,7 +126,7 @@
                         </td>
                     </tr>
                 </table>
-                <table class="allah" align="center" background="https://belshed.github.io/2u/img/background_church.png" cellpadding="0" cellspacing="0">
+                <table class="allah" align="center" background="https://raw.githubusercontent.com/Belshed/belshed.github.io/master/2u/img/background_church.jpg" cellpadding="0" cellspacing="0">
                     <tr>
                         <td align="center">
                             <p class="allah__text">May Allah bring lots of happiness and blessings to your lives. Happy Ramadan Kareem! Don't forget to order something for your family in ToYou app.</p>
@@ -124,6 +135,22 @@
                     <tr>
                         <td align="center" style="padding-top: 20px;">
                             <a href="#" class="allah__link">To order</a>
+                        </td>
+                    </tr>
+                </table>
+                <table class="benefits" align="center">
+                    <tr>
+                        <td align="center">
+                            <img src="https://raw.githubusercontent.com/Belshed/belshed.github.io/master/2u/img/benefit-1.png" alt="Icon" class="benefits__img">
+                            <p class="benefits__text">M-commerce, logistics, and a full-scope chat system. All on one platform.</p>
+                        </td>
+                        <td align="center" style="border-left: 30px solid transparent;">
+                            <img src="https://raw.githubusercontent.com/Belshed/belshed.github.io/master/2u/img/benefit-2.png" alt="Icon" class="benefits__img">
+                            <p class="benefits__text">Serving everyone. From customers to businesses. And from licensed service providers to vehicle owners.</p>
+                        </td>
+                        <td align="center" style="border-left: 30px solid transparent;">
+                            <img src="https://raw.githubusercontent.com/Belshed/belshed.github.io/master/2u/img/benefit-3.png" alt="Icon" class="benefits__img">
+                            <p class="benefits__text">ToYou brings a world of opportunities to everyone; it revives businesses.</p>
                         </td>
                     </tr>
                 </table>
